# faraday

./: Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.claude/: settings.local.json
docs/instrument/: emission-strobe-vibrational-spectroscopy.tex  papers.md  trans-planckian-counting.tex
docs/instruments/single_ion_beam/: ENSEMBLE_DEMONSTRATIONS.md
docs/instruments/single_ion_beam/src/validation/: generate_ensemble_concepts.py
faraday-rs/: Cargo.toml
faraday-rs/crates/faraday-algorithms/: Cargo.toml
faraday-rs/crates/faraday-algorithms/src/: capacity.rs  commutation.rs  lib.rs  selection.rs  ternary.rs
faraday-rs/crates/faraday-cli/: Cargo.toml
faraday-rs/crates/faraday-cli/src/: main.rs
faraday-rs/crates/faraday-core/: Cargo.toml
faraday-rs/crates/faraday-core/src/: constants.rs  coordinate.rs  error.rs  fluid.rs  lib.rs  partition.rs  quantum.rs
faraday-rs/crates/faraday-light/: Cargo.toml
faraday-rs/crates/faraday-light/src/: lib.rs  light.rs  optics.rs  oscillator.rs  photon.rs
faraday-rs/crates/faraday-validation/: Cargo.toml
faraday-rs/crates/faraday-validation/src/: lib.rs
publications/electron-trajectories/: electron-trajectories.aux  electron-trajectories.blg  electron-trajectories.out  electron-trajectories.tex  electron-trajectories.toc  figures.tex
publications/electron-trajectories/figures/: electron-trajectory-determination.aux  electron-trajectory-determination.blg  electron-trajectory-determination.tex
publications/electron-trajectories/sections/: categorical-measurement.tex  experimental-setup.tex  measurement-protocol.tex  ternary-representation.tex  theoretical-framework.tex  trajectory-completion.tex
publications/pertubation-induced-trisection/: pertubation-induced-trisection.aux  pertubation-induced-trisection.out  pertubation-induced-trisection.tex  pertubation-induced-trisection.toc
python/faraday/core/: __init__.py  partition_fluid_structure.py  partition_light.py  partition_optics.py  spectroscopy.py
validation/: CHARTS_README.md  COMPLETE_VALIDATION_PACKAGE.md  FINAL_COMPLETE_VALIDATION_SUMMARY.txt  NEW_PANELS_GENERATED.md  VALIDATION_COMPLETE_SUMMARY.txt  comprehensive_validator_part1.py  comprehensive_validator_part2.py  comprehensive_validator_part3.py  comprehensive_validator_part4.py  generate_all_charts.py  generate_key_charts.py  generate_key_charts_fixed.py  run_comprehensive.py  visualizations.py  visualizations_part2.py  visualizations_part3.py
validation/experiments/: 01_partition_capacity_validation.py  02_selection_rules_validation.py  03_commutation_validation.py  04_ternary_algorithm_validation.py  05_zero_backaction_validation.py  06_trans_planckian_resolution_validation.py  07_hydrogen_transition_simulation.py  08_omnidirectional_trajectory_validation.py  09_virtual_gas_ensemble_validation.py  fluid_path_validation.py  run_all_experiments.py
validation/panels/: generate_panel_09_omnidirectional.py  generate_panel_10_trajectory_reconstruction.py
validation/results/: EXPERIMENTAL_VALIDATION_SUMMARY.txt  OMNIDIRECTIONAL_VALIDATION_SUMMARY.txt  VALIDATION_REPORT.txt  esdvs_results.json  experiment_01_partition_capacity.json  experiment_05_zero_backaction.json  experiment_06_trans_planckian.json  experiment_07_hydrogen_transition.json  experiment_08_omnidirectional_validation.json  fluid_path_validation_results.csv  fluid_path_validation_results.json  fluid_structures.csv  master_validation_results.json  optical_properties.csv  panel_09_data.json  panel_10_data.json  partition_validation_results.json  validation_results.json
