[workspace]
resolver = "2"
members = [
    "crates/faraday-core",
    "crates/faraday-light",
    "crates/faraday-algorithms",
    "crates/faraday-validation",
    "crates/faraday-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kundai Farai Sachikonye"]
license = "MIT OR Apache-2.0"
description = "Partition-based physics framework for electron trajectory determination"

[workspace.dependencies]
# Internal crates
faraday-core = { path = "crates/faraday-core" }
faraday-light = { path = "crates/faraday-light" }
faraday-algorithms = { path = "crates/faraday-algorithms" }
faraday-validation = { path = "crates/faraday-validation" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numeric
num-complex = "0.4"
num-traits = "0.2"
ndarray = "0.15"

# Random/Statistics
rand = "0.8"
rand_distr = "0.4"

# Parallelization
rayon = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
