[package]
name = "faraday-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for the Faraday framework"

[[bin]]
name = "faraday"
path = "src/main.rs"

[dependencies]
faraday-core.workspace = true
faraday-light.workspace = true
faraday-algorithms.workspace = true
faraday-validation.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
