[package]
name = "faraday-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data structures for the Faraday partition physics framework"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
