[package]
name = "faraday-light"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Light propagation and optics for the Faraday framework"

[dependencies]
faraday-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-complex.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
