[package]
name = "faraday-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Validation experiments for the Faraday framework"

[dependencies]
faraday-core.workspace = true
faraday-light.workspace = true
faraday-algorithms.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_distr.workspace = true
ndarray.workspace = true
chrono.workspace = true
rayon.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
